--- a/styles/footer-home.css
+++ b/styles/footer-home.css
@@ -62,8 +62,10 @@
     text-align: center;
     font-weight: 700;
     width: 150px;
+    cursor: pointer;
 }
 .logout {
     padding: 2rem;
     text-align: center
 }
+
