--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,8 @@ body {
     width: 340px;
     height: 60px;
     margin: 1rem 1rem 1rem 0;
+    color: var(--color-text-bg);
+    padding-left: 1rem;
 }
 .login-user::placeholder, .login-password::placeholder{
     color: var(--color-text-bg);
@@ -63,6 +65,9 @@ body {
 .form-label-login {
     font-size: 1.5rem;
     margin-bottom: 1rem;
+}
+.form-inputs {
+    position: relative;
 }
 .login-password {
     margin-left: 0;
@@ -81,12 +86,29 @@ body {
 .login-bust {
     width: 1rem;
     display: inline-block;
+    position: relative;
+    left: 0;
+    flex-wrap: wrap;
 }
+.login-bust-inside{
+    width: 1rem;
+    position: relative;
+    left: -3.5rem;
+    z-index: 10;
+} 
 .login-padlock {
     width: 1rem;
     display: inline-block;
+    position: relative;
+    left: 0;
+    flex-wrap: wrap;    
 }
-
+.login-padlock-inside {
+    width: 1rem;
+    position: relative;
+    left: -3.5rem;
+    z-index: 10;
+}
 .logo {    
     width: 100%;
 }
