--- a/styles/home.css
+++ b/styles/home.css
@@ -23,29 +23,37 @@
 }
 .home-full-date {
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .home-hour {
     font-size: 6rem;
     font-family: 'League Spartan', sans-serif;
 }
 .home-date-full-year {
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     font-family: 'nunito', sans-serif;
     margin-top: -1rem;
-    margin-left: 1rem;
 }
 .home-city {
     font-family: 'nunito', sans-serif;
+    margin-bottom: 0;
+}
+.container {
+    display: flex;
+    justify-content: center;
 }
 .home-degrees {
     font-size: 3rem;
     font-family: 'League Spartan', sans-serif;
+    margin-top: 0.5rem;
+    margin-left: 0.5rem; 
 }
 .home-logo-compass {
     width: 14rem;   
     height: 3.5rem; 
 }
-
 .home-body {
     display: flex;
     justify-content: space-between;
@@ -55,7 +63,7 @@
     margin-right: 4rem;
 }
 .home-logo-compass-big {
-    width: 25rem;
+    width: 20rem;
     z-index: -1;
 }
 .home-mission {
@@ -67,9 +75,8 @@
     margin: 0.3rem 0;
 }
 .first-line {
-    font-size: 1rem;
     font-weight: bold;
-    font-size: 1.5rem;    
+    font-size: 1.7rem;    
 }
 .next-line {
     font-size: 2.5rem;
