--- a/styles/medias.css
+++ b/styles/medias.css
@@ -2,6 +2,7 @@
     body {
         display: flex;
         flex-direction: column;
+        background: var(--color-bg-login);
     }
     .message {
         margin-left: 1rem;
@@ -14,6 +15,9 @@
         padding-bottom: 2rem;
         transition: 2s ease-in-out 0.1s;
     } 
+    .login-bust {
+        display: inline;
+    }
     #compass-notebook {
         display: none;
     }
@@ -28,7 +32,7 @@
         flex-direction: column;
     }
     .form-login {
-        width: 200px;
+        width: 300px;
         padding-bottom: 2rem;
     }
     #user, #password, #submit {
