--- a/styles/style.css
+++ b/styles/style.css
@@ -26,13 +26,14 @@ body {
     margin-top: 10rem;
 }
 .message-ola{
-    font-size: 3.75rem;
+    font-size: 3.5rem;
     margin-bottom: 1rem;
 }
 .message-login{
-    width: 300px;
-    font-size: 1rem;
+    width: 250px;
+    font-size: 0.8rem;
     line-height: 1.5rem;
+    color: var(--color-text-bg);
 }
 .login {
     width: 100%;
@@ -42,9 +43,10 @@ body {
     display: flex;
     flex-direction: column; 
     align-items: left;
+    font-size: 0.5rem;
     width: 400px;
     margin-left: 10rem;
-    margin-top: 10rem;
+    margin-top: 8rem;
 }
 
 .login-user, .login-password {
@@ -140,7 +142,7 @@ body {
     width: 14rem;   
     height: 3.5rem; 
     position: absolute;
-    top: 8%;
+    top: 4%;
     left: 67%;
 }
 
